--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fad3bb ;
+  background-color: #fad3bb;
+  font-family: "Quicksand", sans-serif;
 }
 
 .main {
   flex: 3;
+  /* z-index: 2; */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .sidePanel {
   flex: 1;
+}
+
+.signInContainer {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
