routes added; ui fixes

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,14 @@
   align-items: center; */
 }
 
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .sidePanel {
   flex: 1;
 }
