--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fad3bb;
+  background-color: #ecf0f3;
   font-family: "Quicksand", sans-serif;
 }
 
