--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: #ecf0f3;
+  /* align-items: center; */
+  background-color: #f2f3f9;
+  /* background-image: linear-gradient(rgb(115, 6, 158), rgb(69, 12, 116)); */
   font-family: "Quicksand", sans-serif;
 }
 
 .main {
-  flex: 3;
+  /* flex: 3; */
   /* z-index: 2; */
   /* display: flex;
   justify-content: center;
@@ -25,7 +26,7 @@ a:active {
 }
 
 .sidePanel {
-  flex: 1;
+  /* flex: 1; */
 }
 
 .signInContainer {
